--- a/demoApp1/build.gradle
+++ b/demoApp1/build.gradle
@@ -37,12 +37,36 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     
+    //wiremock
+    testImplementation 'com.github.tomakehurst:wiremock:3.10.0'
+    
     // Mockito Core for mocking objects
     testImplementation 'org.mockito:mockito-core:5.5.0'
 
     // Mockito with JUnit 5 support
     testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    
+    //wiremock
+    testImplementation 'com.github.tomakehurst:wiremock:3.10.0'
+    
+    //cucumber
+    testImplementation 'io.cucumber:cucumber-java:7.10.0' // Latest version
+    testImplementation 'io.cucumber:cucumber-junit:7.10.0' // For JUnit test execution 
+    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.10.0'
+    testImplementation 'io.cucumber:cucumber-spring:7.14.0'
+    
+    // Jackson dependencies
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+
+    // If you're using JSON processing, you might also want to include jackson-core and jackson-annotations
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+    
+    
+    
+    
 }
 
 tasks.named('test') {
