--- a/demoApp1/src/main/resources/application.properties
+++ b/demoApp1/src/main/resources/application.properties
@@ -11,3 +11,20 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 server.port=8888
 
+spring.batch.job.enabled=true
+spring.main.allow-bean-definition-overriding=true
+spring.batch.initialize-schema=always
+#spring.batch.job.name=H2ToCsvJob
+
+# Enabling OpenAPI documentation
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+micrometer.tracing.enabled=true  # Enable tracing for the application
+micrometer.tracing.exporter.zipkin.endpoint=http://localhost:9411/api/v2/spans  # Zipkin endpoint to receive traces
+micrometer.tracing.sampler.probability=1.0  # 100% of requests will be traced
+
+
+
