--- a/demoApp1/build.gradle
+++ b/demoApp1/build.gradle
@@ -2,6 +2,18 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.1-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.6'
+    id 'scala'  // Add the Scala plugin for Scala support
+    //id 'io.gatling.gradle' version '3.9.5' 
+    id 'io.gatling.gradle' version '3.13.1'
+    id 'org.openapi.generator' version '6.3.0'
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir "$buildDir/generated/src/main/java"
+        }
+    }
 }
 
 group = 'com.example'
@@ -38,7 +50,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     
     //wiremock
-    testImplementation 'com.github.tomakehurst:wiremock:3.10.0'
+    //testImplementation 'com.github.tomakehurst:wiremock:3.10.0'
+    //testImplementation "org.wiremock:wiremock-standalone:3.10.0"
     
     // Mockito Core for mocking objects
     testImplementation 'org.mockito:mockito-core:5.5.0'
@@ -46,10 +59,7 @@ dependencies {
     // Mockito with JUnit 5 support
     testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-    
-    //wiremock
-    testImplementation 'com.github.tomakehurst:wiremock:3.10.0'
+    //implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     
     //cucumber
     testImplementation 'io.cucumber:cucumber-java:7.10.0' // Latest version
@@ -64,9 +74,102 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
     
+    //JAXB
+    // MOXy - JAXB implementation for JSON
+    implementation 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.7'
+
+    // JAXB API - Required for JAXB annotations and classes
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
+    // EclipseLink JPA (javax.persistence)
+    implementation 'org.eclipse.persistence:javax.persistence:2.2.0'
+
+    
+    //Gatling
+    //testImplementation 'io.gatling:gatling-core:3.9.5'  // Latest core version
+    //testImplementation 'io.gatling:gatling-http:3.9.5'  // Latest HTTP version
+    //implementation 'io.gatling.highcharts:gatling-charts-highcharts:3.9.5'
+	//implementation  'com.typesafe:config:1.3.1'
+    //testImplementation 'org.scala-lang:scala-library:2.13.10'
+    //testImplementation 'org.scalatest:scalatest_2.13:3.2.9'
+    
+    // Gatling dependencies
+	implementation 'io.gatling:gatling-core:3.13.1'   // Core Gatling library
+	implementation 'io.gatling:gatling-http:3.13.1'   // HTTP module for Gatling
+	implementation 'io.gatling.highcharts:gatling-charts-highcharts:3.13.1'  // Highcharts for Gatling results
+	implementation 'org.scala-lang:scala-library:2.12.10'  // Scala library dependency (Compatible with Gatling 3.9.5)
+	testImplementation 'org.scala-js:scalajs-test-bridge_2.12:1.9.0'   // Scala.js test bridge compatible with 2.12.x
+	implementation 'com.typesafe:config:1.3.1'   // Configuration library
+	
+ 
+	//Spring Batch
+	//implementation 'org.springframework.boot:spring-boot-starter-batch'
+	//implementation 'org.springframework.batch:spring-batch-core:5.0.0'
+	//implementation 'org.springframework.batch:spring-batch-file:5.0.0'
+	//testImplementation 'org.springframework.batch:spring-batch-test'
+	//implementation "org.apache.commons:commons-csv:1.5"
+	//implementation 'com.opencsv:opencsv:5.6'
     
     
+    // Spring Batch dependencies
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.batch:spring-batch-core'
+    implementation 'org.springframework.batch:spring-batch-infrastructure'
+ 
+    // For writing to CSV
+    implementation 'com.opencsv:opencsv:5.6'
     
+    //Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    
+    //OpenAI swagger
+  	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+    implementation 'org.springdoc:springdoc-openapi-ui:2.3.0'
+    
+    //sleuth
+    // Spring Cloud Sleuth (to enable tracing in Spring Boot)
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    
+    //implementation 'org.springframework.boot:spring-boot-starter-web'
+  	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+  	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+  	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+  	
+  	//PACT provider
+  	//testImplementation 'au.com.dius.pact.provider:pact-jvm-provider-spring:4.5.8'
+    //testImplementation 'au.com.dius.pact.provider:pact-spring-boot-starter:4.5.8'
+    //testimplementation 'au.com.dius.pact.provider:junit5spring:4.5.8'
+    implementation 'au.com.dius.pact.provider:junit5spring:4.5.8'
+    
+    testImplementation 'au.com.dius:pact-jvm-provider:4.5.8'
+
+    // Pact JUnit5 extension for Consumer contract testing
+    testImplementation 'au.com.dius:pact-jvm-consumer:4.5.8'
+
+    // Pact JUnit5 support for testing provider
+    testImplementation 'au.com.dius:pact-jvm-provider-junit5:4.5.8'
+
+    
+  	
+    
+}
+
+task generateOpenApiCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
+    group = "build"
+    description = "Generates Java code from OpenAPI specification"
+    //dependsOn build  // Make sure this task runs after the build
+    generatorName = "spring"  // Specify 'spring' for Spring Boot code generation
+    inputSpec = "$rootDir/api-docs.yaml"  // Path to your OpenAPI YAML file
+    outputDir = "$buildDir/generated"  // Directory to output generated files
+    apiPackage = "com.example.demoApp1.api"  // API package name
+    modelPackage = "com.example.demoApp1.model"  // Model package name
+    configOptions = [
+        sourceFolder: "swagger",  // Folder for sources
+        java8: "true",  // Java 8 compatibility
+        interfaceOnly: "false",  // Generate only interfaces, not implementation
+        useBeanValidation: "true"  // Enable Bean Validation annotations
+    ]
+    validateSpec = false 
 }
 
 tasks.named('test') {
