--- a/demoApp1/build.gradle
+++ b/demoApp1/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     
     //wiremock
     //testImplementation 'com.github.tomakehurst:wiremock:3.10.0'
-    //testImplementation "org.wiremock:wiremock-standalone:3.10.0"
+    testImplementation "org.wiremock:wiremock-standalone:3.10.0"
     
     // Mockito Core for mocking objects
     testImplementation 'org.mockito:mockito-core:5.5.0'
@@ -83,15 +83,6 @@ dependencies {
 
     // EclipseLink JPA (javax.persistence)
     implementation 'org.eclipse.persistence:javax.persistence:2.2.0'
-
-    
-    //Gatling
-    //testImplementation 'io.gatling:gatling-core:3.9.5'  // Latest core version
-    //testImplementation 'io.gatling:gatling-http:3.9.5'  // Latest HTTP version
-    //implementation 'io.gatling.highcharts:gatling-charts-highcharts:3.9.5'
-	//implementation  'com.typesafe:config:1.3.1'
-    //testImplementation 'org.scala-lang:scala-library:2.13.10'
-    //testImplementation 'org.scalatest:scalatest_2.13:3.2.9'
     
     // Gatling dependencies
 	implementation 'io.gatling:gatling-core:3.13.1'   // Core Gatling library
@@ -100,17 +91,7 @@ dependencies {
 	implementation 'org.scala-lang:scala-library:2.12.10'  // Scala library dependency (Compatible with Gatling 3.9.5)
 	testImplementation 'org.scala-js:scalajs-test-bridge_2.12:1.9.0'   // Scala.js test bridge compatible with 2.12.x
 	implementation 'com.typesafe:config:1.3.1'   // Configuration library
-	
- 
-	//Spring Batch
-	//implementation 'org.springframework.boot:spring-boot-starter-batch'
-	//implementation 'org.springframework.batch:spring-batch-core:5.0.0'
-	//implementation 'org.springframework.batch:spring-batch-file:5.0.0'
-	//testImplementation 'org.springframework.batch:spring-batch-test'
-	//implementation "org.apache.commons:commons-csv:1.5"
-	//implementation 'com.opencsv:opencsv:5.6'
-    
-    
+	    
     // Spring Batch dependencies
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.batch:spring-batch-core'
@@ -122,33 +103,29 @@ dependencies {
     //Thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     
-    //OpenAI swagger
-  	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
-    implementation 'org.springdoc:springdoc-openapi-ui:2.3.0'
+    //OpenAPI swagger
+  	//implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    //implementation 'org.springdoc:springdoc-openapi-ui:2.3.0'
+     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'  // Latest Springdoc OpenAPI version
+     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2' 
     
     //sleuth
-    // Spring Cloud Sleuth (to enable tracing in Spring Boot)
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     
-    //implementation 'org.springframework.boot:spring-boot-starter-web'
+    //Zipkin and micrometer
   	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
   	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
-  	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+ 	
   	
   	//PACT provider
-    implementation 'au.com.dius.pact.provider:junit5spring:4.5.8'
-    
-    testImplementation 'au.com.dius:pact-jvm-provider:4.5.8'
+    //implementation 'au.com.dius.pact.provider:junit5spring:4.5.8'
+    implementation 'au.com.dius.pact.provider:junit5:4.5.8'
 
-    // Pact JUnit5 extension for Consumer contract testing
-    testImplementation 'au.com.dius:pact-jvm-consumer:4.5.8'
+}
 
-    // Pact JUnit5 support for testing provider
-    testImplementation 'au.com.dius:pact-jvm-provider-junit5:4.5.8'
-
-    
-  	
-    
+openApiValidate {
+    inputSpec = "$rootDir/api-docs.yaml"
+    recommend = true
 }
 
 task generateOpenApiCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
@@ -172,3 +149,25 @@ task generateOpenApiCode(type: org.openapitools.generator.gradle.plugin.tasks.Ge
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorPath = configurations.annotationProcessor
+    options.encoding = 'UTF-8'
+}
+
+
+//jar {
+//    from {
+//        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+//    }
+//    include 'com/example/demoApp1/**'
+//    include 'com/example/demoApp1/bo/**'
+//    include 'com/example/demoApp1/config/**'
+//    include 'com/example/demoApp1/controller/**'
+//    include 'com/example/demoApp1/dao/**'
+//    include 'com/example/demoApp1/dto/**'
+//    include 'com/example/demoApp1/exceptions/**'
+//    include 'com/example/demoApp1/serviceImpl/**'
+//    exclude 'com/example/demoApp1/thymeleaf/**'
+//    archiveFileName = 'custom-app.jar'  // Optional: Set a custom name for the JAR file
+//}
