--- a/demoApp1/src/main/resources/application.properties
+++ b/demoApp1/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demoApp1
 # H2 Database Configuration (Auto-detects the driver)
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
